port: initial update to 1.21.5